# Physics-Engine

./: .gitignore  CMakeLists.txt  README.md  TODO.md  run.bat
src/: donut.c  main.cpp  main_blocks.cpp  main_parachutes.cpp
src/math/: CMakeLists.txt  Ray.h  Vector3D.h
src/objects/: Block.h  CMakeLists.txt  Object.h  Parachute.h  Plane.h  Slope.h  Sphere.cpp  Sphere.h
src/physics/: CMakeLists.txt  PhysicsEngine.cpp  PhysicsEngine.h  Player.cpp  Player.h  RigidBody.cpp  RigidBody.h
src/rendering/: CMakeLists.txt  Camera.cpp  Camera.h  GUI.cpp  HitRecord.h  Material.h  RayTracer.cpp  RayTracer.h  Scene.h  UI.cpp  UI.h
